--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,6 @@ board = upesy_wroom
 framework = arduino
 lib_deps = 
 	mobizt/Firebase ESP32 Client@^4.4.17
-	bogde/HX711@^0.7.5
+	paulstoffregen/OneWire@^2.3.8
+	milesburton/DallasTemperature@^4.0.4
 monitor_speed = 115200
